--- a/src/web/index-dev.html
+++ b/src/web/index-dev.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>京程一灯yd-react-generator</title>
+    <title>前端先锋plus</title>
     <link
     rel="stylesheet"
     href="https://cdn.bootcdn.net/ajax/libs/normalize/0/normalize.min.css"
